--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Mini Site</title>
+    <title>Mini Site com API</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Bem-vindo ao meu Mini Site!</h1>
-    <p>Este é um site simples hospedado no GitHub Pages.</p>
-    <button id="clickMe">Clique-me</button>
+    <h1>Bem-vindo ao Mini Site com API!</h1>
+    <p>Clique no botão abaixo para fazer uma chamada à API.</p>
+    <button id="fetchData">Clique-me para chamar a API</button>
     <div id="result"></div>
 
     <script src="script.js"></script>
