--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mini Site com API</title>
+    <title>Teste de API com JSONPlaceholder</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Bem-vindo ao Mini Site com API!</h1>
-    <p>Clique no botão abaixo para fazer uma chamada à API.</p>
+    <h1>Teste de API</h1>
+    <p>Clique no botão abaixo para fazer uma chamada à API de teste.</p>
     <button id="fetchData">Clique-me para chamar a API</button>
     <div id="result"></div>
 
