--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <p id="promptOutput"></p>
     </div>
 
+    <!-- Colocar o script aqui, antes de fechar o body -->
     <script src="script.js"></script>
 </body>
 </html>
