--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <p id="promptOutput"></p>
     </div>
 
-    <!-- Colocar o script aqui, antes de fechar o body -->
+    <!-- Certifique-se de que o script é carregado no final do corpo -->
     <script src="script.js"></script>
 </body>
 </html>
