--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Outros campos omitidos para brevidade -->
 
-    <button onclick="generatePrompt()">Gerar Prompt</button>
+    <button id="generateBtn">Gerar Prompt</button> <!-- Removido o atributo onclick -->
     
     <div id="result"></div>
     <div id="aiResult"></div> <!-- Exibição do resultado da IA -->
